styled header section for mobile

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/bbc-favicon.ico">
   <title>BBC News</title>
 
   <link rel="stylesheet" href="styles/styles.css">
@@ -28,15 +29,31 @@
         <li id='tv-link'><a class='navbar-link' href="https://www.bbc.co.uk/iplayer/guide">TV</a></li>
         <li id='radio-link'><a class='navbar-link' href="https://www.bbc.co.uk/sounds">Radio</a></li>
         <li id='more-link'><a class='navbar-link' href="https://www.bbc.com/news/technology#orb-footer">More</a></li>
-        <li><a class='navbar-link' href="https://www.bbc.co.uk/search?q="><img src="images/orb-search-dark.png" id='search-icon'
-              alt="magnifying glass search icon"></a></li>
+        <li><a class='navbar-link' href="https://www.bbc.co.uk/search?q="><img src="images/orb-search-dark.png"
+              id='search-icon' alt="magnifying glass search icon"></a></li>
       </ul>
     </nav>
     <div id="header-divider"></div>
     <div class="main-headline">
-
+      <h3>Technology</h3>
+      <div id="main-headline">
+        <h1 class='story-link'><a href="https://www.bbc.com/news/technology-35350789">Asda bug exposed payment
+            details</a></h1>
+        <figure><img id='asda-sign' src="images/asda-sign.gif" alt="green Asda shop sign">
+          <figcaption>Security vulnerabilities that put customers at risk have affected Asda's website for a couple of
+            years, a security expert has revealed.</figcaption>
+        </figure>
+        <span class='story-footnote-tag story-link'>2 hours ago <span class='story-footnote-tag-divider'>|</span> <a
+            href="https://www.bbc.com/news/technology">Technology</a></span>
+        <span class='headline-divider'></span>
+        <ul class='story-footnote-links'>
+          <li class='story-footnote-link story-link'><a href="https://www.bbc.com/news/technology-33409594">Surveillance firm hit in hack attack</a></li>
+          <li class='story-footnote-link story-link'><a href="https://www.bbc.com/news/technology-29279213">eBay flaw has existed for months</a></li>
+        </ul>
+      </div>
     </div>
   </header>
+  <hr>
   <main>
 
   </main>
