--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="images/bbc-favicon.ico">
-  <title>BBC News</title>
+  <title>Technology - BBC News</title>
 
   <link rel="stylesheet" href="styles/styles.css">
 
@@ -33,29 +33,193 @@
               id='search-icon' alt="magnifying glass search icon"></a></li>
       </ul>
     </nav>
-    <div id="header-divider"></div>
+    <div id="header-divider"><a href="http://www.bbc.co.uk/news">
+        <img id='news-logo' src="images/bbc-news-logo-light.png" alt="News logo"></a>
+    </div>
     <div class="main-headline">
       <h3>Technology</h3>
       <div id="main-headline">
         <h1 class='story-link'><a href="https://www.bbc.com/news/technology-35350789">Asda bug exposed payment
             details</a></h1>
-        <figure><img id='asda-sign' src="images/asda-sign.gif" alt="green Asda shop sign">
-          <figcaption>Security vulnerabilities that put customers at risk have affected Asda's website for a couple of
+        <figure><img class='story-img' id='asda-sign' src="images/asda-sign.gif" alt="green Asda shop sign">
+          <figcaption id='main-caption'>Security vulnerabilities that put customers at risk have affected Asda's website
+            for a couple of
             years, a security expert has revealed.</figcaption>
         </figure>
         <span class='story-footnote-tag story-link'>2 hours ago <span class='story-footnote-tag-divider'>|</span> <a
             href="https://www.bbc.com/news/technology">Technology</a></span>
         <span class='headline-divider'></span>
         <ul class='story-footnote-links'>
-          <li class='story-footnote-link story-link'><a href="https://www.bbc.com/news/technology-33409594">Surveillance firm hit in hack attack</a></li>
-          <li class='story-footnote-link story-link'><a href="https://www.bbc.com/news/technology-29279213">eBay flaw has existed for months</a></li>
+          <li class='story-footnote-link story-link'><a href="https://www.bbc.com/news/technology-33409594">Surveillance
+              firm hit in hack attack</a></li>
+          <li class='story-footnote-link story-link'><a href="https://www.bbc.com/news/technology-29279213">eBay flaw
+              has existed for months</a></li>
         </ul>
       </div>
     </div>
   </header>
   <hr>
   <main>
-
+    <section class="headlines">
+      <div class="headline">
+        <figure><img class='story-img' id='twitter-img' src="images/twitter3.jpg"
+            alt="white Twitter robot on blue background">
+          <figcaption>
+            <h2 class='story-caption'><a href="https://www.bbc.com/news/technology-35351154">Twitter suffers technical
+                fault</a></h2>The social network Twitter goes offline for many users, with web visitors being greeted
+            by an error
+            page.
+          </figcaption>
+        </figure>
+        <span class='story-footnote-tag story-link'>1 hour ago <span class='story-footnote-tag-divider'>|</span> <a
+            href="https://www.bbc.com/news/technology">Technology</a></span>
+        <span class='headline-divider'></span>
+        <ul class='story-footnote-links'>
+          <li class='story-footnote-link story-link'><a
+              href="https://www.bbc.com/news/world-us-canada-34383655">Facebook down for second time in week</a></li>
+        </ul>
+      </div>
+      <hr>
+      <div class="headline">
+        <figure><img class='story-img' id='drone-img' src="images/drone germany.jpg"
+            alt="car driving with drone overhead">
+          <figcaption>
+            <h2 class='story-caption'><a href="http://www.bbc.co.uk/news/technology-35351709">Drone lands on moving car
+                in Germany</a></h2>Roboticists in Germany have taught a drone how to land itself on a car travelling at
+            75 km/h (47mph).
+          </figcaption>
+        </figure>
+        <span class='story-footnote-tag story-link'>44 minutes ago <span class='story-footnote-tag-divider'>|</span> <a
+            href="https://www.bbc.com/news/technology">Technology</a></span>
+        <span class='headline-divider'></span>
+        <ul class='story-footnote-links'>
+          <li class='story-footnote-link story-link'><a href="http://www.bbc.co.uk/news/technology-35240062">BBC
+              reporter breaks 'world's safest' drone</a></li>
+          <li class='story-footnote-link story-link'><a href="http://www.bbc.co.uk/news/technology-34474809">Drone flies
+              over sea to deliver package</a></li>
+        </ul>
+      </div>
+      <hr>
+      <div class="headline">
+        <h2 class='mini-story-caption'><a href="http://www.bbc.co.uk/news/technology-35351158">Samsung updates sticky
+            stylus holder</a></h2>
+        <span class='story-footnote-tag  story-link mini-story-footnote'>1 hour ago <span
+            class='story-footnote-tag-divider'>|</span> <a
+            href="https://www.bbc.com/news/technology">Technology</a></span>
+      </div>
+      <hr>
+      <div class="headline">
+        <h2 class='mini-story-caption'><a href="http://www.bbc.co.uk/news/technology-35341528">Minecraft to launch
+            education edition</a></h2>
+        <span class='story-footnote-tag story-link mini-story-footnote'>4 hours ago <span
+            class='story-footnote-tag-divider'>|</span> <a
+            href="https://www.bbc.com/news/technology">Technology</a></span>
+      </div>
+      <hr>
+      <div class="headline">
+        <h2 class='mini-story-caption'><a href="http://www.bbc.co.uk/news/technology-35343093">Ask.fm reveals top teen
+            slang</a></h2>
+        <span class='story-footnote-tag story-link mini-story-footnote'>3 hours ago <span
+            class='story-footnote-tag-divider'>|</span> <a
+            href="https://www.bbc.com/news/technology">Technology</a></span>
+      </div>
+      <hr>
+      <div class="headline">
+        <h2 class='mini-story-caption'><a href="http://www.bbc.co.uk/news/technology-35344843">Government urged to use
+            blockchain tech</a></h2>
+        <span class='story-footnote-tag story-link mini-story-footnote'>2 hours ago <span
+            class='story-footnote-tag-divider'>|</span> <a
+            href="https://www.bbc.com/news/technology">Technology</a></span>
+      </div>
+      <hr>
+      <div class="headline">
+        <h2 class='mini-story-caption'><a href="http://www.bbc.co.uk/news/technology-35311456">Device makers face child
+            labour claims</a></h2>
+        <span class='story-footnote-tag story-link mini-story-footnote'>19 January 2016 <span
+            class='story-footnote-tag-divider'>|</span> <a
+            href="https://www.bbc.com/news/technology">Technology</a></span>
+      </div>
+      <hr>
+      <div class="headline">
+        <h2 class='mini-story-caption'><a href="http://www.bbc.co.uk/news/technology-35343091">Friends Reunited website
+            to close</a></h2>
+        <span class='story-footnote-tag story-link mini-story-footnote'>18 January 2016 <span
+            class='story-footnote-tag-divider'>|</span> <a
+            href="https://www.bbc.com/news/technology">Technology</a></span>
+      </div>
+      <hr>
+      <div class="headline">
+        <h2 class='mini-story-caption'><a href="http://www.bbc.co.uk/news/technology-35343561">Is the Bitcoin experiment
+            doomed?</a></h2>
+        <span class='story-footnote-tag story-link mini-story-footnote'>7 hours ago <span
+            class='story-footnote-tag-divider'>|</span> <a
+            href="https://www.bbc.com/news/technology">Technology</a></span>
+      </div>
+      <hr>
+      <div class="headline">
+        <h2 class='mini-story-caption'><a href="http://www.bbc.co.uk/news/world-asia-35346822">Peshawar massacre video
+            game pulled</a></h2>
+        <span class='story-footnote-tag story-link mini-story-footnote'>18 January 2016 <span
+            class='story-footnote-tag-divider'>|</span> <a href="http://www.bbc.co.uk/news/world/asia">Asia</a></span>
+      </div>
+      <hr>
+      <div class="headline">
+        <h2 class='mini-story-caption'><a href="http://www.bbc.co.uk/news/technology-35351158">Pakistan unblocks access
+            to YouTube</a></h2>
+        <span class='story-footnote-tag story-link mini-story-footnote' id='last-mini-story-footnote'>18 January 2016
+          <span class='story-footnote-tag-divider'>|</span> <a
+            href="http://www.bbc.co.uk/news/world/asia">Asia</a></span>
+      </div>
+      <hr>
+    </section>
+    <section id='ces'>
+      <h2 id='ces-heading'><a href="https://www.bbc.com/news/technology-34739453">New tech at CES</a></h2>
+      <div class="iframe-wrapper">
+        <iframe width="100%" height="195" src="https://www.youtube.com/embed/V2BSv-BUowo" frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h3 class='ces-story'><a
+            href="https://www.bbc.com/news/av/technology-35259687/ces-2016-tv-plays-different-audio-to-two-viewers">TV
+            plays different audio to two viewers</a></h3>
+      </div>
+      <div class="iframe-wrapper">
+        <iframe width="100%" height="195" src="https://www.youtube.com/embed/gkRRJ8Hyoq4" frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h3 class='ces-story'><a href="http://www.bbc.co.uk/news/technology-35258676">Case adds hardware modules to
+            phones</a></h3>
+      </div>
+      <div class="iframe-wrapper">
+        <iframe width="100%" height="195" src="https://www.youtube.com/embed/mC7E9lT7iiQ" frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h3 class='ces-story'><a href="http://www.bbc.co.uk/news/technology-35258680">BMW shows gesture-controlled
+            car</a></h3>
+      </div>
+      <div class="iframe-wrapper">
+        <iframe width="100%" height="195" src="https://www.youtube.com/embed/C-9zaHcYaNM" frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h3 class='ces-story'><a href="http://www.bbc.co.uk/news/technology-35240062">BBC reporter breaks 'world's
+            safest' drone</a></h3>
+      </div>
+    </section>
+    <hr>
+    <section id='also'>
+      <h2 id='also-heading'>Also in the News</h2>
+      <div class="headline also-story">
+        <img id='hawking-img' src="images/hawking.jpg" alt="Stephen Hawking">
+        <h2 class='mini-story-caption also-caption'><a href="http://www.bbc.co.uk/news/science-environment-35344664">
+          Hawking warns on 'own goal' disaster</a></h2>
+        <span class='story-footnote-tag  story-link mini-story-footnote'>19 January 2016 <span
+            class='story-footnote-tag-divider'>|</span> <a
+            href="http://www.bbc.co.uk/news/science_and_environment">Science & Environment</a></span>
+      </div>
+      <div class="headline also-story">
+        <img id='snoop-img' src="images/snoop.jpg" alt="Snoop Dogg">
+        <h2 class='mini-story-caption also-caption'><a href="http://www.bbc.co.uk/newsbeat/articles/35313618"><span id='newsbeat-badge'>Newsbeat</span> Why Snoop was mad at Xbox</a></h2>
+        <span class='story-footnote-tag story-link mini-story-footnote'>14 January 2016 <span
+            class='story-footnote-tag-divider'>|</span> <a
+            href="http://www.bbc.co.uk/newsbeat/home">Home</a></span>
+      </div>
+    </section>
+    <hr>
   </main>
   <footer>
 
