applied mobile styles to features&experts sections

--- a/index.html
+++ b/index.html
@@ -206,17 +206,109 @@
       <div class="headline also-story">
         <img id='hawking-img' src="images/hawking.jpg" alt="Stephen Hawking">
         <h2 class='mini-story-caption also-caption'><a href="http://www.bbc.co.uk/news/science-environment-35344664">
-          Hawking warns on 'own goal' disaster</a></h2>
+            Hawking warns on 'own goal' disaster</a></h2>
         <span class='story-footnote-tag  story-link mini-story-footnote'>19 January 2016 <span
             class='story-footnote-tag-divider'>|</span> <a
             href="http://www.bbc.co.uk/news/science_and_environment">Science & Environment</a></span>
       </div>
       <div class="headline also-story">
         <img id='snoop-img' src="images/snoop.jpg" alt="Snoop Dogg">
-        <h2 class='mini-story-caption also-caption'><a href="http://www.bbc.co.uk/newsbeat/articles/35313618"><span id='newsbeat-badge'>Newsbeat</span> Why Snoop was mad at Xbox</a></h2>
+        <h2 class='mini-story-caption also-caption'><a href="http://www.bbc.co.uk/newsbeat/articles/35313618"><span
+              id='newsbeat-badge'>Newsbeat</span> Why Snoop was mad at Xbox</a></h2>
         <span class='story-footnote-tag story-link mini-story-footnote'>14 January 2016 <span
-            class='story-footnote-tag-divider'>|</span> <a
-            href="http://www.bbc.co.uk/newsbeat/home">Home</a></span>
+            class='story-footnote-tag-divider'>|</span> <a href="http://www.bbc.co.uk/newsbeat/home">Home</a></span>
+      </div>
+    </section>
+    <hr>
+    <section id='features'>
+      <h2 id='features-heading'>Features & Analysis</h2>
+      <div class="headline">
+        <figure><img class='story-img' id='india-img' src="images/india.jpg" alt="woman paying at till in India">
+          <figcaption>
+            <h4 class='story-caption'><a href="http://www.bbc.co.uk/news/business-35341971">Bye bye cash?</a></h4>How
+            mobile payments are changing India's economy
+          </figcaption>
+        </figure>
+        <span class='story-footnote-tag story-link'>19 January 2016 <span class='story-footnote-tag-divider'>|</span> <a
+            href="http://www.bbc.co.uk/news/business">Business</a></span>
+      </div>
+      <div class="headline">
+        <figure><img class='story-img' id='airbiznb-img' src="images/airbiznb.jpg" alt="office workers in room">
+          <figcaption>
+            <h4 class='story-caption'><a href="http://www.bbc.co.uk/news/business-35246320">Air-biz-nb?</a></h4>Meet the
+            people renting out their homes as offices
+          </figcaption>
+        </figure>
+        <span class='story-footnote-tag story-link'>15 January 2016 <span class='story-footnote-tag-divider'>|</span> <a
+            href="http://www.bbc.co.uk/news/business">Business</a></span>
+      </div>
+      <div class="headline">
+        <figure><img class='story-img' id='emails-img' src="images/emails.jpg" alt="finger typing on computer keyboard">
+          <figcaption>
+            <h4 class='story-caption'><a href="http://www.bbc.co.uk/news/magazine-35311890">Work snooping</a></h4>How
+            does it feel to have your emails investigated?
+          </figcaption>
+        </figure>
+        <span class='story-footnote-tag story-link'>14 January 2016 <span class='story-footnote-tag-divider'>|</span> <a
+            href="http://www.bbc.co.uk/news/magazine">Magazine</a></span>
+      </div>
+      <div class="headline">
+        <figure><img class='story-img' id='bowie-img' src="images/bowie.jpg" alt="David Bowie singing onstage">
+          <figcaption>
+            <h4 class='story-caption'><a href="http://www.bbc.co.uk/news/technology-35279234">Internet pioneer</a></h4>
+            How David Bowie helped shape the web
+          </figcaption>
+        </figure>
+        <span class='story-footnote-tag story-link'>11 January 2016 <span class='story-footnote-tag-divider'>|</span> <a
+            href="https://www.bbc.com/news/technology">Technology</a></span>
+      </div>
+      <div class="headline">
+        <figure><img class='story-img' id='motorshow-img' src="images/motorshow.jpg" alt="a blue BMW onstage">
+          <figcaption>
+            <h4 class='story-caption'><a href="http://www.bbc.co.uk/news/business-35304186">Detroit motors</a></h4>
+            Highlights from the US' auto show
+          </figcaption>
+        </figure>
+        <span class='story-footnote-tag story-link'>13 January 2016 <span class='story-footnote-tag-divider'>|</span> <a
+            href="http://www.bbc.co.uk/news/business">Business</a></span>
+      </div>
+      <div class="headline">
+        <figure><img class='story-img' id='wall-e-img' src="images/wall-e.jpeg" alt="Wall-E">
+          <figcaption>
+            <h4 class='story-caption'><a href="http://www.bbc.co.uk/news/business-35279854">A Wall-E world?</a></h4>Can
+            tech help tackle the planet's waste crisis?
+          </figcaption>
+        </figure>
+        <span class='story-footnote-tag story-link'>12 January 2016 <span class='story-footnote-tag-divider'>|</span> <a
+            href="http://www.bbc.co.uk/news/business">Business</a></span>
+      </div>
+    </section>
+    <hr>
+    <section id='experts'>
+      <h2 id='experts-heading'>Our Experts</h2>
+      <div class="headline">
+        <div class="experts-speech-bubble">
+          <h4><a href="http://www.bbc.co.uk/news/technology-35323122">The internet - not an equaliser</a></h4>
+          <p>The benefits of technology are not being fully realised in developing countries, says a World Bank report.
+          </p>
+          <span class='story-footnote-tag'>15 January 2016</span>
+        </div>
+        <address class='correspondent'><a rel='author'
+            href="http://www.bbc.co.uk/news/correspondents/rorycellanjones"><span class='correspondent'>Rory
+              Cellan-Jones</span><br>Technology
+            correspondent</a></address>
+      </div>
+      <div class="headline">
+        <div class="experts-speech-bubble">
+          <h4><a href="http://www.bbc.co.uk/news/technology-35310200">Meet the robotic cat for the elderly</a></h4>
+          <p>Affordable robotic companion pets are increasingly being seen as a key tool in combating loneliness.
+          </p>
+          <span class='story-footnote-tag'>15 January 2016</span>
+        </div>
+        <address class='correspondent'><a rel='author' href="http://www.bbc.co.uk/news/correspondents/davelee"><span
+              class='correspondent'>Dave
+              Lee</span><br>North America technology
+            reporter</a></address>
       </div>
     </section>
     <hr>
