applied further mobile styles to main section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
   <link rel="stylesheet" href="styles/styles.css">
 
+  <!-- Font Awesome SVG icons used with permission: https://fontawesome.com/license -->
+
+  <script src="https://kit.fontawesome.com/4ca5255d6d.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -212,7 +216,7 @@
             href="http://www.bbc.co.uk/news/science_and_environment">Science & Environment</a></span>
       </div>
       <div class="headline also-story">
-        <img id='snoop-img' src="images/snoop.jpg" alt="Snoop Dogg">
+        <img id='snoop-img' src="images/_snoop.jpg" alt="Snoop Dogg">
         <h2 class='mini-story-caption also-caption'><a href="http://www.bbc.co.uk/newsbeat/articles/35313618"><span
               id='newsbeat-badge'>Newsbeat</span> Why Snoop was mad at Xbox</a></h2>
         <span class='story-footnote-tag story-link mini-story-footnote'>14 January 2016 <span
@@ -225,7 +229,8 @@
       <div class="headline">
         <figure><img class='story-img' id='india-img' src="images/india.jpg" alt="woman paying at till in India">
           <figcaption>
-            <h4 class='story-caption'><a href="http://www.bbc.co.uk/news/business-35341971">Bye bye cash?</a></h4>How
+            <h4 class='story-caption bunched-text'><a href="http://www.bbc.co.uk/news/business-35341971">Bye bye
+                cash?</a></h4>How
             mobile payments are changing India's economy
           </figcaption>
         </figure>
@@ -235,7 +240,8 @@
       <div class="headline">
         <figure><img class='story-img' id='airbiznb-img' src="images/airbiznb.jpg" alt="office workers in room">
           <figcaption>
-            <h4 class='story-caption'><a href="http://www.bbc.co.uk/news/business-35246320">Air-biz-nb?</a></h4>Meet the
+            <h4 class='story-caption bunched-text'><a href="http://www.bbc.co.uk/news/business-35246320">Air-biz-nb?</a>
+            </h4>Meet the
             people renting out their homes as offices
           </figcaption>
         </figure>
@@ -245,7 +251,8 @@
       <div class="headline">
         <figure><img class='story-img' id='emails-img' src="images/emails.jpg" alt="finger typing on computer keyboard">
           <figcaption>
-            <h4 class='story-caption'><a href="http://www.bbc.co.uk/news/magazine-35311890">Work snooping</a></h4>How
+            <h4 class='story-caption bunched-text'><a href="http://www.bbc.co.uk/news/magazine-35311890">Work
+                snooping</a></h4>How
             does it feel to have your emails investigated?
           </figcaption>
         </figure>
@@ -255,7 +262,8 @@
       <div class="headline">
         <figure><img class='story-img' id='bowie-img' src="images/bowie.jpg" alt="David Bowie singing onstage">
           <figcaption>
-            <h4 class='story-caption'><a href="http://www.bbc.co.uk/news/technology-35279234">Internet pioneer</a></h4>
+            <h4 class='story-caption bunched-text'><a href="http://www.bbc.co.uk/news/technology-35279234">Internet
+                pioneer</a></h4>
             How David Bowie helped shape the web
           </figcaption>
         </figure>
@@ -265,7 +273,8 @@
       <div class="headline">
         <figure><img class='story-img' id='motorshow-img' src="images/motorshow.jpg" alt="a blue BMW onstage">
           <figcaption>
-            <h4 class='story-caption'><a href="http://www.bbc.co.uk/news/business-35304186">Detroit motors</a></h4>
+            <h4 class='story-caption bunched-text'><a href="http://www.bbc.co.uk/news/business-35304186">Detroit
+                motors</a></h4>
             Highlights from the US' auto show
           </figcaption>
         </figure>
@@ -273,9 +282,10 @@
             href="http://www.bbc.co.uk/news/business">Business</a></span>
       </div>
       <div class="headline">
-        <figure><img class='story-img' id='wall-e-img' src="images/wall-e.jpeg" alt="Wall-E">
+        <figure><img class='story-img' id='wall-e-img' src="images/_wall-e.jpeg" alt="Wall-E">
           <figcaption>
-            <h4 class='story-caption'><a href="http://www.bbc.co.uk/news/business-35279854">A Wall-E world?</a></h4>Can
+            <h4 class='story-caption bunched-text'><a href="http://www.bbc.co.uk/news/business-35279854">A Wall-E
+                world?</a></h4>Can
             tech help tackle the planet's waste crisis?
           </figcaption>
         </figure>
@@ -312,6 +322,100 @@
       </div>
     </section>
     <hr>
+    <section id='click'>
+      <h2 id='click-heading'><a href="http://www.bbc.co.uk/programmes/n13xtmd5">Click - the world of technology</a></h2>
+      <div class="headline click-headline">
+        <figure><iframe class='click-video' src="https://www.youtube.com/embed/AcXJMfK9yqc" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption>
+            <h4 class='story-caption bunched-text click-link'><a
+                href="http://www.bbc.co.uk/news/technology-35222280">Will 3D-printed running
+                shoes take off?</a></h4>
+          </figcaption>
+        </figure>
+        <span class='story-footnote-tag story-link'>13 January 2016 <span class='story-footnote-tag-divider'>|</span> <a
+            href="http://www.bbc.co.uk/news/technology">Technology</a></span>
+      </div>
+      <div class="headline click-headline">
+        <figure><iframe class='click-video' src="https://www.youtube.com/embed/v_ZSjiJ3VyI" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption>
+            <h4 class='story-caption bunched-text click-link'><a
+                href="http://www.bbc.co.uk/news/technology-35222272">Will the future be
+                augmented reality?</a></h4>
+          </figcaption>
+        </figure>
+        <span class='story-footnote-tag story-link'>11 January 2016 <span class='story-footnote-tag-divider'>|</span> <a
+            href="http://www.bbc.co.uk/news/technology">Technology</a></span>
+      </div>
+      <div class="headline click-headline">
+        <figure><iframe class='click-video' src="https://www.youtube.com/embed/ZZBGG-mmDVQ" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <figcaption>
+            <h4 class='story-caption bunched-text click-link'><a
+                href="http://www.bbc.co.uk/news/technology-35242810">360-degree VR camera put
+                to the test</a></h4>
+          </figcaption>
+        </figure>
+        <span class='story-footnote-tag story-link'>7 January 2016 <span class='story-footnote-tag-divider'>|</span> <a
+            href="http://www.bbc.co.uk/news/technology">Technology</a></span>
+      </div>
+    </section>
+    <hr>
+    <section id='special-reports'>
+      <h2 id='special-reports-heading'>Special reports</h2>
+      <div class="headline">
+        <figure><img class='story-img' id='ces-img' src="images/ces.jpeg" alt="CES 2016 crowd">
+          <figcaption>
+            <h3 class='story-caption bunched-text'><a href="http://www.bbc.co.uk/news/technology-34739453">CES 2016:
+                Tech
+                extravaganza</a></h3>Gadgets, robots, cars and more at Vegas' giant tech show
+          </figcaption>
+        </figure>
+        <span class='story-footnote-tag story-link'>4 January 2016</span>
+      </div>
+      <div class="headline">
+        <figure><img class='story-img' id='video-games-img' src="images/video-games.jpg" alt="video game controllers">
+          <figcaption>
+            <h4 class='story-caption bunched-text'><a href="http://www.bbc.co.uk/news/technology-22774341">Video
+                games</a>
+            </h4>
+          </figcaption>
+        </figure>
+        <span class='story-footnote-tag story-link'>15 June 2015</span>
+      </div>
+      <div class="headline">
+        <figure><img class='story-img' id='robot-img' src="images/robot.jpg" alt="a robot holding a shield">
+          <figcaption>
+            <h4 class='story-caption bunched-text'><a href="http://www.bbc.co.uk/news/technology-33978561">Intelligent
+                machines</a></h4>
+          </figcaption>
+        </figure>
+        <span class='story-footnote-tag story-link'>14 September 2015</span>
+      </div>
+      <div class="headline">
+        <figure><img class='story-img' id='trending-img' src="images/trending.jpg" alt="crowd staring at screens">
+          <figcaption>
+            <h4 class='story-caption bunched-text'><a href="http://www.bbc.co.uk/news/blogs/trending/">#BBCTrending</a>
+            </h4>
+          </figcaption>
+        </figure>
+        <span class='story-footnote-tag story-link'>10 December 2013</span>
+      </div>
+    </section>
+    <hr>
+    <section id='share'>
+      <h2 id='share-heading'><a href="http://www.bbc.co.uk/news/have_your_say">Share with BBC News</a></h2>
+      <div class="headline">
+        <ul id='share-list'>
+          <li class='share-list-item'>Send an SMS or MMS to 61124</li>
+          <li class='share-list-item'>Email us at <a
+              href="mailto:haveyoursay@bbc.co.uk"><strong>haveyoursay@bbc.co.uk</strong></a></li>
+          <li class='share-list-item'>Follow Have Your Say on <a
+              href="https://twitter.com/BBC_HaveYourSay"><strong>Twitter</strong></a></li>
+        </ul>
+      </div>
+    </section>
   </main>
   <footer>
 
