styled socia media&Most Popular sections 4 mobile

--- a/index.html
+++ b/index.html
@@ -5,13 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="images/bbc-favicon.ico">
-  <title>Technology - BBC News</title>
+  <title>Technologys - BBC News</title>
 
   <link rel="stylesheet" href="styles/styles.css">
-
-  <!-- Font Awesome SVG icons used with permission: https://fontawesome.com/license -->
-
-  <script src="https://kit.fontawesome.com/4ca5255d6d.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -404,17 +400,79 @@
       </div>
     </section>
     <hr>
-    <section id='share'>
-      <h2 id='share-heading'><a href="http://www.bbc.co.uk/news/have_your_say">Share with BBC News</a></h2>
-      <div class="headline">
-        <ul id='share-list'>
-          <li class='share-list-item'>Send an SMS or MMS to 61124</li>
-          <li class='share-list-item'>Email us at <a
-              href="mailto:haveyoursay@bbc.co.uk"><strong>haveyoursay@bbc.co.uk</strong></a></li>
-          <li class='share-list-item'>Follow Have Your Say on <a
-              href="https://twitter.com/BBC_HaveYourSay"><strong>Twitter</strong></a></li>
-        </ul>
+    <section id="social-media">
+      <div id='share'>
+        <h2 id='share-heading'><a href="http://www.bbc.co.uk/news/have_your_say">Share with BBC News</a></h2>
+        <div class="headline">
+          <ul id='share-list'>
+            <li class='share-list-item'>Send an SMS or MMS to 61124</li>
+            <li class='share-list-item'>Email us at <a
+                href="mailto:haveyoursay@bbc.co.uk"><strong>haveyoursay@bbc.co.uk</strong></a></li>
+            <li class='share-list-item'>Follow Have Your Say on <a
+                href="https://twitter.com/BBC_HaveYourSay"><strong>Twitter</strong></a></li>
+          </ul>
+        </div>
       </div>
+      <div id="follow">
+        <h2 id='follow-heading'>Follow Us</h2>
+        <div class="headline">
+          <a href="https://www.facebook.com/bbctechtent">
+            <div id="facebook">Facebook</div>
+          </a>
+          <a href="https://twitter.com/BBCTech">
+            <div id="twitter">Twitter</div>
+          </a>
+          <a href="http://feeds.bbci.co.uk/news/technology/rss.xml">
+            <div id="rss">RSS News Feed</div>
+          </a>
+        </div>
+      </div>
+    </section>
+    <section id='most-popular'>
+      <table>
+        <thead id='most-popular-heading'>
+          <tr>
+            <td colspan="2">
+              <h2>Most Popular</h2><span> From Technology</span>
+            </td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th class='weekday'><a href="http://www.bbc.co.uk/news/technology-35343091">
+                MON
+              </a></th>
+            <td><a href="http://www.bbc.co.uk/news/technology-35343091">Friends Reunited website to close down</a></td>
+          </tr>
+          <tr>
+            <th class='weekday'><a href="http://www.bbc.co.uk/news/technology-35324997">
+                SUN</a></th>
+            <td><a href="http://www.bbc.co.uk/news/technology-35324997">
+                George W Bush tops Wikipedia 15th birthday list</a></td>
+
+          </tr>
+          <tr>
+            <th class='weekday'><a href="http://www.bbc.co.uk/news/technology-35320436">
+                SAT</a></th>
+
+            <td><a href="http://www.bbc.co.uk/news/technology-35320436">
+                Netflix cracks down on proxy streaming</a></td>
+          </tr>
+          <tr>
+            <th class='weekday'><a href="http://www.bbc.co.uk/news/technology-35320436">
+                FRI</a></th>
+            <td><a href="http://www.bbc.co.uk/news/technology-35320436">
+                Netflix cracks down on proxy streaming</a></td>
+          </tr>
+          <tr>
+            <th class='weekday'><a href="http://www.bbc.co.uk/news/technology-35311447">
+                THU</a></th>
+            <td><a href="http://www.bbc.co.uk/news/technology-35311447">
+                Nest thermostat bug leaves users cold</a></td>
+
+          </tr>
+        </tbody>
+      </table>
     </section>
   </main>
   <footer>
