--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
         <figure><img class='story-img' id='asda-sign' src="images/asda-sign.gif" alt="green Asda shop sign">
           <figcaption id='main-caption'>Security vulnerabilities that put customers at risk have affected Asda's website
             for a couple of
-            years, a security expert has revealed.</figcaption>
+            years, a security expert has revealed.
+            <span class='story-footnote-tag story-link'>2 hours ago <span class='story-footnote-tag-divider'>|</span> <a
+                href="https://www.bbc.com/news/technology">Technology</a></span></figcaption>
         </figure>
-        <span class='story-footnote-tag story-link'>2 hours ago <span class='story-footnote-tag-divider'>|</span> <a
-            href="https://www.bbc.com/news/technology">Technology</a></span>
+
         <span class='headline-divider'></span>
         <ul class='story-footnote-links'>
           <li class='story-footnote-link story-link'><a href="https://www.bbc.com/news/technology-33409594">Surveillance
@@ -64,15 +65,16 @@
       <div class="headline">
         <figure><img class='story-img' id='twitter-img' src="images/twitter3.jpg"
             alt="white Twitter robot on blue background">
-          <figcaption>
+          <figcaption id='twitter-caption'>
             <h2 class='story-caption'><a href="https://www.bbc.com/news/technology-35351154">Twitter suffers technical
                 fault</a></h2>The social network Twitter goes offline for many users, with web visitors being greeted
             by an error
-            page.
+            page.<span class='story-footnote-tag story-link'>1 hour ago <span
+                class='story-footnote-tag-divider'>|</span> <a
+                href="https://www.bbc.com/news/technology">Technology</a></span>
           </figcaption>
         </figure>
-        <span class='story-footnote-tag story-link'>1 hour ago <span class='story-footnote-tag-divider'>|</span> <a
-            href="https://www.bbc.com/news/technology">Technology</a></span>
+
         <span class='headline-divider'></span>
         <ul class='story-footnote-links'>
           <li class='story-footnote-link story-link'><a
@@ -83,14 +85,14 @@
       <div class="headline">
         <figure><img class='story-img' id='drone-img' src="images/drone germany.jpg"
             alt="car driving with drone overhead">
-          <figcaption>
+          <figcaption id='drone-caption'>
             <h2 class='story-caption'><a href="http://www.bbc.co.uk/news/technology-35351709">Drone lands on moving car
                 in Germany</a></h2>Roboticists in Germany have taught a drone how to land itself on a car travelling at
-            75 km/h (47mph).
+            75 km/h (47mph).<span class='story-footnote-tag story-link'>44 minutes ago <span
+                class='story-footnote-tag-divider'>|</span> <a
+                href="https://www.bbc.com/news/technology">Technology</a></span>
           </figcaption>
         </figure>
-        <span class='story-footnote-tag story-link'>44 minutes ago <span class='story-footnote-tag-divider'>|</span> <a
-            href="https://www.bbc.com/news/technology">Technology</a></span>
         <span class='headline-divider'></span>
         <ul class='story-footnote-links'>
           <li class='story-footnote-link story-link'><a href="http://www.bbc.co.uk/news/technology-35240062">BBC
@@ -227,66 +229,67 @@
           <figcaption>
             <h4 class='story-caption bunched-text'><a href="http://www.bbc.co.uk/news/business-35341971">Bye bye
                 cash?</a></h4>How
-            mobile payments are changing India's economy
+            mobile payments are changing India's economy<span class='story-footnote-tag story-link'>19 January 2016
+              <span class='story-footnote-tag-divider'>|</span> <a
+                href="http://www.bbc.co.uk/news/business">Business</a></span>
           </figcaption>
         </figure>
-        <span class='story-footnote-tag story-link'>19 January 2016 <span class='story-footnote-tag-divider'>|</span> <a
-            href="http://www.bbc.co.uk/news/business">Business</a></span>
+
       </div>
       <div class="headline">
         <figure><img class='story-img' id='airbiznb-img' src="images/airbiznb.jpg" alt="office workers in room">
           <figcaption>
             <h4 class='story-caption bunched-text'><a href="http://www.bbc.co.uk/news/business-35246320">Air-biz-nb?</a>
             </h4>Meet the
-            people renting out their homes as offices
+            people renting out their homes as offices<span class='story-footnote-tag story-link'>15 January 2016 <span
+                class='story-footnote-tag-divider'>|</span> <a
+                href="http://www.bbc.co.uk/news/business">Business</a></span>
           </figcaption>
         </figure>
-        <span class='story-footnote-tag story-link'>15 January 2016 <span class='story-footnote-tag-divider'>|</span> <a
-            href="http://www.bbc.co.uk/news/business">Business</a></span>
       </div>
       <div class="headline">
         <figure><img class='story-img' id='emails-img' src="images/emails.jpg" alt="finger typing on computer keyboard">
           <figcaption>
             <h4 class='story-caption bunched-text'><a href="http://www.bbc.co.uk/news/magazine-35311890">Work
                 snooping</a></h4>How
-            does it feel to have your emails investigated?
+            does it feel to have your emails investigated?<span class='story-footnote-tag story-link'>14 January 2016
+              <span class='story-footnote-tag-divider'>|</span> <a
+                href="http://www.bbc.co.uk/news/magazine">Magazine</a></span>
           </figcaption>
         </figure>
-        <span class='story-footnote-tag story-link'>14 January 2016 <span class='story-footnote-tag-divider'>|</span> <a
-            href="http://www.bbc.co.uk/news/magazine">Magazine</a></span>
       </div>
       <div class="headline">
         <figure><img class='story-img' id='bowie-img' src="images/bowie.jpg" alt="David Bowie singing onstage">
           <figcaption>
             <h4 class='story-caption bunched-text'><a href="http://www.bbc.co.uk/news/technology-35279234">Internet
                 pioneer</a></h4>
-            How David Bowie helped shape the web
+            How David Bowie helped shape the web<span class='story-footnote-tag story-link'>11 January 2016 <span
+                class='story-footnote-tag-divider'>|</span> <a
+                href="https://www.bbc.com/news/technology">Technology</a></span>
           </figcaption>
         </figure>
-        <span class='story-footnote-tag story-link'>11 January 2016 <span class='story-footnote-tag-divider'>|</span> <a
-            href="https://www.bbc.com/news/technology">Technology</a></span>
       </div>
       <div class="headline">
         <figure><img class='story-img' id='motorshow-img' src="images/motorshow.jpg" alt="a blue BMW onstage">
           <figcaption>
             <h4 class='story-caption bunched-text'><a href="http://www.bbc.co.uk/news/business-35304186">Detroit
                 motors</a></h4>
-            Highlights from the US' auto show
+            Highlights from the US' auto show<span class='story-footnote-tag story-link'>13 January 2016 <span
+                class='story-footnote-tag-divider'>|</span> <a
+                href="http://www.bbc.co.uk/news/business">Business</a></span>
           </figcaption>
         </figure>
-        <span class='story-footnote-tag story-link'>13 January 2016 <span class='story-footnote-tag-divider'>|</span> <a
-            href="http://www.bbc.co.uk/news/business">Business</a></span>
       </div>
       <div class="headline">
         <figure><img class='story-img' id='wall-e-img' src="images/_wall-e.jpeg" alt="Wall-E">
           <figcaption>
             <h4 class='story-caption bunched-text'><a href="http://www.bbc.co.uk/news/business-35279854">A Wall-E
                 world?</a></h4>Can
-            tech help tackle the planet's waste crisis?
+            tech help tackle the planet's waste crisis?<span class='story-footnote-tag story-link'>12 January 2016 <span
+                class='story-footnote-tag-divider'>|</span> <a
+                href="http://www.bbc.co.uk/news/business">Business</a></span>
           </figcaption>
         </figure>
-        <span class='story-footnote-tag story-link'>12 January 2016 <span class='story-footnote-tag-divider'>|</span> <a
-            href="http://www.bbc.co.uk/news/business">Business</a></span>
       </div>
     </section>
     <hr>
@@ -327,10 +330,12 @@
             <h4 class='story-caption bunched-text click-link'><a
                 href="http://www.bbc.co.uk/news/technology-35222280">Will 3D-printed running
                 shoes take off?</a></h4>
+            <span class='story-footnote-tag story-link'>13 January 2016 <span
+                class='story-footnote-tag-divider'>|</span> <a
+                href="http://www.bbc.co.uk/news/technology">Technology</a></span>
           </figcaption>
         </figure>
-        <span class='story-footnote-tag story-link'>13 January 2016 <span class='story-footnote-tag-divider'>|</span> <a
-            href="http://www.bbc.co.uk/news/technology">Technology</a></span>
+
       </div>
       <div class="headline click-headline">
         <figure><iframe class='click-video' src="https://www.youtube.com/embed/v_ZSjiJ3VyI" frameborder="0"
@@ -339,10 +344,11 @@
             <h4 class='story-caption bunched-text click-link'><a
                 href="http://www.bbc.co.uk/news/technology-35222272">Will the future be
                 augmented reality?</a></h4>
+            <span class='story-footnote-tag story-link'>11 January 2016 <span
+                class='story-footnote-tag-divider'>|</span> <a
+                href="http://www.bbc.co.uk/news/technology">Technology</a></span>
           </figcaption>
         </figure>
-        <span class='story-footnote-tag story-link'>11 January 2016 <span class='story-footnote-tag-divider'>|</span> <a
-            href="http://www.bbc.co.uk/news/technology">Technology</a></span>
       </div>
       <div class="headline click-headline">
         <figure><iframe class='click-video' src="https://www.youtube.com/embed/ZZBGG-mmDVQ" frameborder="0"
@@ -351,10 +357,11 @@
             <h4 class='story-caption bunched-text click-link'><a
                 href="http://www.bbc.co.uk/news/technology-35242810">360-degree VR camera put
                 to the test</a></h4>
+            <span class='story-footnote-tag story-link'>7 January 2016 <span class='story-footnote-tag-divider'>|</span>
+              <a href="http://www.bbc.co.uk/news/technology">Technology</a></span>
           </figcaption>
         </figure>
-        <span class='story-footnote-tag story-link'>7 January 2016 <span class='story-footnote-tag-divider'>|</span> <a
-            href="http://www.bbc.co.uk/news/technology">Technology</a></span>
+
       </div>
     </section>
     <hr>
@@ -366,37 +373,37 @@
             <h3 class='story-caption bunched-text'><a href="http://www.bbc.co.uk/news/technology-34739453">CES 2016:
                 Tech
                 extravaganza</a></h3>Gadgets, robots, cars and more at Vegas' giant tech show
+            <span class='story-footnote-tag story-link'>4 January 2016</span>
           </figcaption>
         </figure>
-        <span class='story-footnote-tag story-link'>4 January 2016</span>
       </div>
       <div class="headline">
         <figure><img class='story-img' id='video-games-img' src="images/video-games.jpg" alt="video game controllers">
-          <figcaption>
+          <figcaption id='video-games-caption'>
             <h4 class='story-caption bunched-text'><a href="http://www.bbc.co.uk/news/technology-22774341">Video
                 games</a>
             </h4>
+            <span class='story-footnote-tag story-link'>15 June 2015</span>
           </figcaption>
         </figure>
-        <span class='story-footnote-tag story-link'>15 June 2015</span>
       </div>
       <div class="headline">
         <figure><img class='story-img' id='robot-img' src="images/robot.jpg" alt="a robot holding a shield">
-          <figcaption>
+          <figcaption id='robot-caption'>
             <h4 class='story-caption bunched-text'><a href="http://www.bbc.co.uk/news/technology-33978561">Intelligent
                 machines</a></h4>
+            <span class='story-footnote-tag story-link'>14 September 2015</span>
           </figcaption>
         </figure>
-        <span class='story-footnote-tag story-link'>14 September 2015</span>
       </div>
       <div class="headline">
         <figure><img class='story-img' id='trending-img' src="images/trending.jpg" alt="crowd staring at screens">
-          <figcaption>
+          <figcaption id='trending-caption'>
             <h4 class='story-caption bunched-text'><a href="http://www.bbc.co.uk/news/blogs/trending/">#BBCTrending</a>
             </h4>
+            <span class='story-footnote-tag story-link'>10 December 2013</span>
           </figcaption>
         </figure>
-        <span class='story-footnote-tag story-link'>10 December 2013</span>
       </div>
     </section>
     <hr>
@@ -474,6 +481,24 @@
         </tbody>
       </table>
     </section>
+    <section id='elsewhere'>
+      <div class="headline">
+        <h2 id='elsewhere-heading'>Elsewhere on the BBC</h2>
+        <figure id='bible-fig'><img class='story-img' id='bible-img' src="images/bible.jpeg" alt="an open bible">
+          <figcaption id='bible-caption'>
+            <h4 class='story-caption bunched-text'><a href="http://www.bbc.co.uk/timelines/zxjwmnb">Dangerous words</a></h4>
+            <span class='story-footnote-subheading'>The Bible's turbulent history</span>
+          </figcaption>
+        </figure>
+        <figure id='smoothies-fig'><img class='story-img' id='smoothies-img' src="images/smoothies.png" alt="smoothies surrounded by fruit and veg">
+          <figcaption id='smoothie-caption'>
+            <h4 class='story-caption bunched-text'><a href="http://www.bbc.co.uk/programmes/p03dy5gr?intc_type=promo&intc_location=news&intc_campaign=bulletblender&intc_linkname=bbctwo_fac_vidclip1">Smoothie wars</a></h4>
+            <span class='story-footnote-subheading'>Is it worth buying a budget bullet blender?</span>
+          </figcaption>
+        </figure>
+      </div>
+    </section>
+    <hr>
   </main>
   <footer>
 
