finished styling Main section for mobile

--- a/index.html
+++ b/index.html
@@ -486,19 +486,154 @@
         <h2 id='elsewhere-heading'>Elsewhere on the BBC</h2>
         <figure id='bible-fig'><img class='story-img' id='bible-img' src="images/bible.jpeg" alt="an open bible">
           <figcaption id='bible-caption'>
-            <h4 class='story-caption bunched-text'><a href="http://www.bbc.co.uk/timelines/zxjwmnb">Dangerous words</a></h4>
+            <h4 class='story-caption bunched-text'><a href="http://www.bbc.co.uk/timelines/zxjwmnb">Dangerous words</a>
+            </h4>
             <span class='story-footnote-subheading'>The Bible's turbulent history</span>
           </figcaption>
         </figure>
-        <figure id='smoothies-fig'><img class='story-img' id='smoothies-img' src="images/smoothies.png" alt="smoothies surrounded by fruit and veg">
+        <figure id='smoothies-fig'><img class='story-img' id='smoothies-img' src="images/smoothies.png"
+            alt="smoothies surrounded by fruit and veg">
           <figcaption id='smoothie-caption'>
-            <h4 class='story-caption bunched-text'><a href="http://www.bbc.co.uk/programmes/p03dy5gr?intc_type=promo&intc_location=news&intc_campaign=bulletblender&intc_linkname=bbctwo_fac_vidclip1">Smoothie wars</a></h4>
+            <h4 class='story-caption bunched-text'><a
+                href="http://www.bbc.co.uk/programmes/p03dy5gr?intc_type=promo&intc_location=news&intc_campaign=bulletblender&intc_linkname=bbctwo_fac_vidclip1">Smoothie
+                wars</a></h4>
             <span class='story-footnote-subheading'>Is it worth buying a budget bullet blender?</span>
           </figcaption>
         </figure>
       </div>
     </section>
     <hr>
+    <section id="podcasts">
+      <h2 id="podcasts-heading">Podcasts</h2>
+      <div class="podcast" id='main-podcast'>
+        <figure><img class='story-img' src="images/podcast-ces.jpg" alt="men wearing virtual reality headsets">
+          <figcaption class='podcast-caption'>
+            <h3 class='story-caption bunched-text'><a class='podcast-link'
+                href="https://www.bbc.co.uk/programmes/p03ddzqc">Tech Tent: Viva, Las Vegas</a>
+            </h3>
+            <span class='story-footnote-subheading'>Rory is at the CES technology show in Las Vegas</span>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="podcast">
+        <figure><img class='story-img' src="images/game-on.jpg" alt="blue and green studded grid background">
+          <figcaption class='podcast-caption'>
+            <h4 class='story-caption bunched-text'><a class='podcast-link'
+                href="http://www.bbc.co.uk/programmes/p03f81hh">Game On: Telling stories</a>
+            </h4>
+            <span class='story-footnote-subheading'>Students discuss writing for video games</span>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="podcast">
+        <figure id='vr'><img class='story-img' src="images/vr.jpg" alt="a man wearing a virtual reality headset">
+          <figcaption class='podcast-caption'>
+            <h4 class='story-caption bunched-text'><a class='podcast-link'
+                href="http://www.bbc.co.uk/programmes/p03d52pl">Click World: VR gets real</a>
+            </h4>
+            <span class='story-footnote-subheading'>The evolution of virtual reality</span>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="podcast">
+        <figure id='phonein'><img class='story-img' src="images/phonein.jpg"
+            alt="blue and green studded grid background">
+          <figcaption class='podcast-caption'>
+            <h4 class='story-caption bunched-text'><a class='podcast-link'
+                href="http://www.bbc.co.uk/programmes/p03cfn1z">Tech Phone In</a>
+            </h4>
+            <span class='story-footnote-subheading'>Gadget detective Fevzi Turklap provides tech advice</span>
+          </figcaption>
+        </figure>
+      </div>
+    </section>
+    <hr>
+    <section id='more'>
+      <h2 id='more-heading'>More from BBC News</h2>
+      <div class="headline more-headline">
+        <figure><img src="images/china.jpg" alt="Chinese banknotes">
+          <figcaption>
+            <h4 class='more-footnote-tag'><a href="http://www.bbc.co.uk/news/business">Business</a></h4>
+            <span class='more-divider'></span>
+            <h3 class='story-caption bunched-text more-link'><a href="http://www.bbc.co.uk/news/business-35349576">China
+                growth slowest in 25 years</a></h3>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="headline more-headline">
+        <figure><img src="images/pollsters.jpg" alt="David Cameron and his wife outside 10 Downing St.">
+          <figcaption>
+            <h4 class='more-footnote-tag'><a href="http://www.bbc.co.uk/news/politics">UK Politics</a></h4>
+            <span class='more-divider'></span>
+            <h3 class='story-caption bunched-text more-link'><a
+                href="http://www.bbc.co.uk/news/uk-politics-35347948">Election pollsters 'got samples wrong'</a></h3>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="headline more-headline">
+        <figure><img id='ivf' src="images/ivf.jpg" alt="IVF diagram">
+          <figcaption>
+            <h4 class='more-footnote-tag'><a href="http://www.bbc.co.uk/news/health">Health</a></h4>
+            <span class='more-divider'></span>
+            <h3 class='story-caption bunched-text more-link'><a
+                href="http://www.bbc.co.uk/news/health-35344195">'Natural' fertilisation device for IVF</a></h3>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="headline more-headline">
+        <figure><img src="images/educate.jpg" alt="three Muslim female faces">
+          <figcaption>
+            <h4 class='more-footnote-tag'><a href="http://www.bbc.co.uk/news/education">Education & Family</a></h4>
+            <span class='more-divider'></span>
+            <h3 class='story-caption bunched-text more-link'><a
+                href="http://www.bbc.co.uk/news/education-35343679">'Educate against hate', urges government</a></h3>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="headline more-headline">
+        <figure><img src="images/asda-sign.gif" alt="green Asda shop sign">
+          <figcaption>
+            <h4 class='more-footnote-tag'><a href="http://www.bbc.co.uk/news/technology">Technology</a></h4>
+            <span class='more-divider'></span>
+            <h3 class='story-caption bunched-text more-link'><a
+                href="http://www.bbc.co.uk/news/technology-35350789">Asda bug exposed payment details</a></h3>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="headline more-headline">
+        <figure><img src="images/hawking.jpg" alt="Stephen Hawking">
+          <figcaption>
+            <h4 class='more-footnote-tag'><a href="http://www.bbc.co.uk/news/science_and_environment">Science &
+                Environment</a></h4>
+            <span class='more-divider'></span>
+            <h3 class='story-caption bunched-text more-link'><a
+                href="http://www.bbc.co.uk/news/science-environment-35344664">Hawking warns on 'own goal' disaster</a>
+            </h3>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="headline more-headline">
+        <figure><img src="images/glenn-frey.jpg" alt="Glenn Frey">
+          <figcaption>
+            <h4 class='more-footnote-tag'><a href="http://www.bbc.co.uk/news/entertainment_and_arts">Entertainment &
+                Arts</a></h4>
+            <span class='more-divider'></span>
+            <h3 class='story-caption bunched-text more-link'><a
+                href="http://www.bbc.co.uk/news/world-us-canada-35349025">Eagles guitarist Glenn Frey, 67, dies</a></h3>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="headline more-headline">
+        <figure><img src="images/obese_tonga.jpg" alt="obese people in Tonga">
+          <figcaption>
+            <h4 class='more-footnote-tag'><a href="http://www.bbc.co.uk/news/magazine">Magazine</a></h4>
+            <span class='more-divider'></span>
+            <h3 class='story-caption bunched-text more-link'><a
+                href="http://www.bbc.co.uk/news/magazine-35346493">Roast fat</a></h3>
+          </figcaption>
+        </figure>
+      </div>
+    </section>
   </main>
   <footer>
 
