all mobile styles applied except primary footer

--- a/index.html
+++ b/index.html
@@ -628,15 +628,86 @@
           <figcaption>
             <h4 class='more-footnote-tag'><a href="http://www.bbc.co.uk/news/magazine">Magazine</a></h4>
             <span class='more-divider'></span>
-            <h3 class='story-caption bunched-text more-link'><a
-                href="http://www.bbc.co.uk/news/magazine-35346493">Roast fat</a></h3>
+            <h3 class='story-caption bunched-text more-link'><a href="http://www.bbc.co.uk/news/magazine-35346493">Roast
+                fat</a></h3>
           </figcaption>
         </figure>
       </div>
     </section>
   </main>
   <footer>
-
+    <div id="secondary-footer">
+      <h2 id="secondary-footer-heading">BBC News Services</h2>
+      <ul id='news-services-list'>
+        <li class='news-services-list-item'><a href="http://www.bbc.co.uk/news/10628994">On your mobile</a></li>
+        <li class='news-services-list-item'><a href="http://www.bbc.co.uk/news/help-17655000">On your connected tv</a>
+        </li>
+        <li class='news-services-list-item'><a href="http://www.bbc.co.uk/news/10628323">Get news alerts</a></li>
+        <li class='news-services-list-item'><a href="http://www.bbc.co.uk/news/20039682">Contact BBC News</a></li>
+      </ul>
+    </div>
+    <article id="bbc-iplayer">
+      <h2 id="bbc-iplayer-heading">Best of BBC iPlayer</h2>
+      <div class="slider">
+        <div class="buttons-wrapper">
+          <a class='hover-parent' href="#slide-1">1</a>
+          <a class='hover-parent' href="#slide-2">2</a>
+          <a class='hover-parent' href="#slide-3">3</a>
+          <a class='hover-parent' href="#slide-4">4</a>
+        </div>
+        <div class="slides">
+          <div class="slide" id='slide-1'><a
+              href="https://www.bbc.co.uk/iplayer/episode/p08g29ff/sitting-in-limbo?xtor=CS8-1000-[Discovery_Cards]-[Multi_Site]-[SL02]-[PS_IPLAYER~C~~P_SittingInLimbo]">
+              <figure><img class='story-img' src="images/drama.jpg" alt="BBC drama Sitting in Limbo"><span
+                  class='iplayer-icon'><img src="images/iplayer.png" width="50" height="50"
+                    alt="BBC iPlayer icon"></span>
+                <figcaption>
+                  <h3 class='story-caption bunched-text'>The drama everyone is talking about
+                  </h3>
+                  <h4 class='story-footnote-tag story-link'>BBC iPlayer</h4>
+                </figcaption>
+              </figure>
+            </a></div>
+          <div class="slide" id='slide-2'><a
+              href="https://www.bbc.co.uk/iplayer/episode/p08fkmvq/bbc-trailers-the-salisbury-poisonings?xtor=CS8-1000-[Discovery_Cards]-[Multi_Site]-[SL02]-[PS_IPLAYER~C~~P_SalisburyPoisoningsTrail]">
+              <figure><img class='story-img' src="images/salisbury.jpg" alt="BBC drama The Salisbury Poisonings"><span
+                  class='iplayer-icon'><img src="images/iplayer.png" width="50" height="50"
+                    alt="BBC iPlayer icon"></span>
+                <figcaption>
+                  <h3 class='story-caption bunched-text'>A first look at The Salisbury Poisonings
+                  </h3>
+                  <h4 class='story-footnote-tag story-link'>BBC iPlayer</h4>
+                </figcaption>
+              </figure>
+            </a></div>
+          <div class="slide" id='slide-3'><a
+            href="https://www.bbc.co.uk/iplayer/episode/m000jsy4/mirror-mirror-series-2-episode-1?xtor=CS8-1000-[Discovery_Cards]-[Multi_Site]-[SL02]-[PS_IPLAYER~C~~P_MirrorMirror]">
+            <figure><img class='story-img' src="images/hairdressers.jpg" alt="barber cutting hair"><span
+                class='iplayer-icon'><img src="images/iplayer.png" width="50" height="50"
+                  alt="BBC iPlayer icon"></span>
+              <figcaption>
+                <h3 class='story-caption bunched-text'>What really goes on at a hairdressers?
+                </h3>
+                <h4 class='story-footnote-tag story-link'>BBC iPlayer</h4>
+              </figcaption>
+            </figure>
+          </a></div>
+          <div class="slide" id='slide-4'><a
+            href="https://www.bbc.co.uk/iplayer/episode/m000jjn8/a-house-through-time-series-3-episode-1?xtor=CS8-1000-[Discovery_Cards]-[Multi_Site]-[SL02]-[PS_IPLAYER~C~~P_AHouseThroughTime]">
+            <figure><img class='story-img' src="images/housechange.jpg" alt="BBC documentary series A House Through Time presenter"><span
+                class='iplayer-icon'><img src="images/iplayer.png" width="50" height="50"
+                  alt="BBC iPlayer icon"></span>
+              <figcaption>
+                <h3 class='story-caption bunched-text'>How does a house change through time?
+                </h3>
+                <h4 class='story-footnote-tag story-link'>BBC iPlayer</h4>
+              </figcaption>
+            </figure>
+          </a></div>
+        </div>
+      </div>
+    </article>
+    <div id="primary-footer"></div>
   </footer>
 </body>
 
